--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        JazBro Profile <%= @user.name %>
+        JazBro
       </h1>
       <h2 class="subtitle">
 
