Initialize devise views and controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,15 @@
-<section class="hero is-primary">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        JazBro
-      </h1>
-      <h2 class="subtitle">
-
-      </h2>
+<div class="container mg-8">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-10 has-background-primary">
+      <p class="bd-notification">
+        <code class="html">is-half</code><br>
+        <code class="html">is-half</code><br>
+        <code class="html">is-half</code><br>
+        <code class="html">is-half</code><br>
+        <br>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+      </p>
     </div>
   </div>
-</section>
+</div>
+
